# mini.projects

./: README.md
kaleidoscope/: .gitignore  CMakeLists.txt  README.md
kaleidoscope/src/: CMakeLists.txt  main.cpp
kaleidoscope/src/ast/: BinaryExprAST.cpp  BinaryExprAST.h  CallExprAST.cpp  CallExprAST.h  ExprAST.h  ForExprAST.cpp  ForExprAST.h  FunctionAST.cpp  FunctionAST.h  IfExprAST.cpp  IfExprAST.h  NumberExprAST.cpp  NumberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  UnaryExprAST.cpp  UnaryExprAST.h  VarExprAST.cpp  VarExprAST.h  VariableExprAST.cpp  VariableExprAST.h
kaleidoscope/src/kaleidoscopejit/: kaleidoscopejit.cpp  kaleidoscopejit.h
kaleidoscope/src/lexer/: lexer.cpp  lexer.h  token.h
kaleidoscope/src/logger/: logger.cpp  logger.h
kaleidoscope/src/parser/: parser.cpp  parser.h
kaleidoscope/src/utils/: kaleidoscope.cpp  kaleidoscope.h  kaleidoscope_jit.h  kaleidoscope_jit_included.h
shell/: .gitignore  Makefile  README.md  main.c  shlite
